# simpleGUI

./: CMakeLists.txt  readme.txt
src/: combo.hpp  internal.cpp  internal.hpp  internal_render.cpp  main.cpp  simpleGUI.cpp  simpleGUI.hpp  simpleGUI_C.cpp  simpleGUI_C.h  util.hpp  widget.hpp  widgetEmplace.hpp  window.cpp  window.hpp
src/layout/: sameLine.cpp
src/widgets/: button.cpp  checkbox.cpp  combo.cpp  combo.hpp  radioButton.cpp  text.cpp  textInput.cpp  textInput.hpp
tests/: Makefile  elementInsertion.cpp  simple.cpp  simple_c.c
